= Release notes v.10.5

== Table of Contents

* Increased test coverage

== Increased test coverage

Increased test coverage for AbstractLinks child classes